--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,22 +1,42 @@
 @import "globals";
+@import "variables"; 
 
-html {
-    font-size: 100%;
-    box-sizing: border-box;
-  }
-  
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-  }
-  
-  body {
-    height: 100vh;
-    font-family: Arial, Helvetica, sans-serif;
-    line-height: 1.3;
-    margin: 0px;
+header {
+  top: 0px;
+  width: 100%;
+  position: fixed;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  padding: 10px 30px 10px 30px;
+  align-items: center;
+  background-color: $eggshell;
+  h1 {
     padding: 0px;
-    background-color: #202020;
-    color: #ffffff;
+    margin: 0px;
+    font-size: 1.5rem;
+    color: $hotpink;
   }
+}
+
+#nav-menu {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 1rem;
+  width: 400px;
+}
+
+#social-links {
+  display: flex;
+  align-items: center;
+  justify-content: space-evenly;
+  padding: 0px;
+  width: 220px;
+  li {
+    height: 35px;
+    img {
+      filter: invert(74%) sepia(7%) saturate(3063%) hue-rotate(113deg) brightness(87%) contrast(89%);
+    }
+  }
+}
