--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,7 +12,7 @@ html {
   }
   
   body {
-    height: 100vh;
+    height: 95vh;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.3;
     margin: 0px;
@@ -31,3 +31,8 @@ html {
       text-decoration: none;
       color: $darkgrey;
   }
+
+  p {
+      margin: 0px;
+  }
+
