--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -8,7 +8,7 @@ header {
   display: flex;
   flex-direction: row;
   justify-content: space-around;
-  padding: 10px 30px 10px 30px;
+  padding: 7px 30px 7px 30px;
   align-items: center;
   background-color: $eggshell;
   h1 {
@@ -40,3 +40,46 @@ header {
     }
   }
 }
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  background-color: $darkgrey;
+  color: $eggshell;
+  ul {
+    line-height: 1.7rem;
+    font-size: .85rem;
+    width: 200px;
+    text-align: left;
+  }
+  a {
+    color: $eggshell;
+  }
+}
+
+#footer-info {
+  display: flex;
+  justify-content: space-evenly;
+  width: 100%;
+  padding: 30px;
+  background-color: $hotpink;
+}
+
+.footer-headings {
+  padding: 0px;
+  margin: 0px;
+}
+
+#copyright-info {
+  display: flex;
+  justify-content: center;
+  padding: 20px;
+  p {
+    width: fit-content;
+    font-size: .85rem;
+  }
+}
+
