--- a/app/scss/_globals.scss
+++ b/app/scss/_globals.scss
@@ -12,12 +12,12 @@ html {
   }
   
   body {
-    height: 95vh;
+    height: 100vh;
     font-family: Arial, Helvetica, sans-serif;
     line-height: 1.3;
     margin: 0px;
     padding: 0px;
-    background-color: $eggshell;
+    background-color: #3D3D3F;
     color: $darkgrey;
   }
 
