--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -4,6 +4,7 @@
 header {
   top: 0px;
   width: 100%;
+  height: 55px;
   position: fixed;
   display: flex;
   flex-direction: row;
@@ -41,17 +42,45 @@ header {
   }
 }
 
+#content {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+main {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  img {
+    margin-top: 55px;
+    width: 1000px;
+    height: auto;
+  }
+}
+
+#about {
+  border: 1px solid red;
+  width: 60em;
+  font-size: 1rem;
+  text-align: justify;
+  padding: 20px;
+}
+
 footer {
   position: absolute;
   bottom: 0px;
   width: 100%;
+  height: fit-content;
   display: flex;
   flex-direction: column;
   background-color: $darkgrey;
   color: $eggshell;
   ul {
-    line-height: 1.7rem;
-    font-size: .85rem;
+    line-height: 1.8rem;
+    font-size: .90rem;
     width: 200px;
     text-align: left;
   }
@@ -76,10 +105,10 @@ footer {
 #copyright-info {
   display: flex;
   justify-content: center;
-  padding: 20px;
+  padding: 30px;
   p {
     width: fit-content;
-    font-size: .85rem;
+    font-size: .90rem;
   }
 }
 
