--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -26,6 +26,18 @@ header {
   align-items: center;
   font-size: 1rem;
   width: 400px;
+  height: 55px;
+  padding: 0px;
+  li {
+    height: 55px;
+    width: 100%;
+  }
+  a {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 55px;
+  }
 }
 
 #social-links {
