added new image and moved all svg files into svg folder

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -71,9 +71,10 @@ main {
 }
 
 #banner-img {
-  margin-top: 100px;
-  width: 1000px;
+  margin-top: 55px;
+  width: 100%;
   height: auto;
+  opacity: 50%;
 }
 
 #about {
@@ -85,7 +86,7 @@ main {
 }
 
 footer {
-  position: absolute;
+  position: relative;
   bottom: 0px;
   width: 100%;
   height: fit-content;
