--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,7 @@
 @import "variables"; 
 
 header {
+  z-index: 100;
   top: 0px;
   width: 100%;
   height: 55px;
@@ -62,19 +63,47 @@ header {
   justify-content: center;
 }
 
+// main content
+
 main {
   display: flex;
-  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
-}
-
-#banner-img {
+  background-image: url('/src/jpg/bokeh.jpg');
+  background-attachment: fixed;
   margin-top: 55px;
   width: 100%;
-  height: auto;
-  opacity: 50%;
+  height: 950px;
+  opacity: 75%;
+}
+
+// info-cards 
+
+.info-card {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: $darkgrey;
+  color: $eggshell;
+  width: 45%;
+  height: 700px;
+  padding: 20px;
+  border-radius: 7px;
+}
+
+.card-div {
+  width: 50%;
+  p {
+    text-align: justify;
+    line-height: 2rem;
+    font-size: 1rem;
+  }
+}
+
+.card-headings {
+  margin-top: 50px;
+  text-align: center;
+  color: $eggshell;
 }
 
 #about {
@@ -84,6 +113,8 @@ main {
   text-align: justify;
   padding: 20px;
 }
+
+// footer
 
 footer {
   position: relative;
