added text content to divs, and added black border around card

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -85,14 +85,18 @@ main {
   align-items: center;
   background-color: $darkgrey;
   color: $eggshell;
-  width: 45%;
+  width: 30%;
   height: 700px;
   padding: 20px;
-  border-radius: 7px;
+  border-radius: 10px;
+  border: 2px solid black;
 }
 
 .card-div {
-  width: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  width: 75%;
   p {
     text-align: justify;
     line-height: 2rem;
