--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -69,23 +69,31 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  margin-top: 55px;
+}
+
+// background image
+#background-image {
+  position: relative;
   background-image: url('/src/jpg/bokeh.jpg');
   background-attachment: fixed;
-  margin-top: 55px;
   width: 100%;
   height: 950px;
-  opacity: 75%;
+  opacity: 55%;
+  z-index: 2;
 }
 
 // main container 
 #main-container {
+  position: absolute;
   display: flex;
   flex-direction: row;
   width: 75%;
   height: 700px; 
   background-color: black;
   border-radius: 10px;
-  border: 1px solid white;
+  border: 2px solid black;
+  z-index: 2;
   img {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
@@ -96,7 +104,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: black;
+  background-color: $darkgrey;
   color: $eggshell;
   width: auto;
   height: 100%;
