--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -83,6 +83,14 @@ main {
   z-index: 2;
 }
 
+#squid-logo {
+  z-index: 3;
+  position: absolute;
+  top: 100px;
+  height: 170px;
+  width: 170px;
+}
+
 // main container 
 #main-container {
   position: absolute;
@@ -91,8 +99,9 @@ main {
   width: 75%;
   height: 700px; 
   background-color: black;
+  box-shadow: 0px 12px 19px 9px rgba(0,0,0,0.55);
   border-radius: 10px;
-  border: 2px solid black;
+  border: 1px solid black;
   z-index: 2;
   img {
     border-top-right-radius: 10px;
@@ -127,15 +136,7 @@ main {
 
 .card-headings {
   text-align: center;
-  color: $hotpink;
-}
-
-#about {
-  border: 1px solid red;
-  width: 60em;
-  font-size: 1rem;
-  text-align: justify;
-  padding: 20px;
+  color: $lightgreen;
 }
 
 // footer
