--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -72,13 +72,11 @@ main {
 }
 
 // background image
-#background-image {
+#background-img {
   position: relative;
-  background-image: url('/src/jpg/bokeh.jpg');
-  background-attachment: fixed;
   width: 100%;
   height: 950px;
-  opacity: 55%;
+  opacity: 0.4;
   z-index: 2;
 }
 
@@ -100,7 +98,7 @@ main {
   background-color: black;
   box-shadow: 0px 12px 19px 9px rgba(0,0,0,0.55);
   border-radius: 10px;
-  border: 1px solid black;
+  border: 1px solid $eggshell;
   z-index: 2;
   img {
     border-top-right-radius: 10px;
@@ -112,7 +110,7 @@ main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: $darkgrey;
+  background-color: black;
   color: $eggshell;
   width: auto;
   height: 100%;
