--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -1,199 +1,12 @@
 @import "globals";
 @import "variables"; 
-
-header {
-  z-index: 100;
-  top: 0px;
-  width: 100%;
-  height: 55px;
-  position: fixed;
-  display: flex;
-  flex-direction: row;
-  justify-content: space-around;
-  padding: 7px 30px 7px 30px;
-  align-items: center;
-  background-color: $eggshell;
-  h1 {
-    padding: 0px;
-    margin: 0px;
-    font-size: 1.5rem;
-    color: $hotpink;
-  }
-}
-
-#nav-menu {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 1rem;
-  width: 400px;
-  height: 55px;
-  padding: 0px;
-  li {
-    height: 55px;
-    width: 100%;
-  }
-  a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 55px;
-  }
-}
-
-#social-links {
-  display: flex;
-  align-items: center;
-  justify-content: space-evenly;
-  padding: 0px;
-  width: 220px;
-  li {
-    height: 35px;
-    img {
-      height: 35px;
-      width: 35px;
-      filter: invert(74%) sepia(7%) saturate(3063%) hue-rotate(113deg) brightness(87%) contrast(89%);
-    }
-  }
-}
+@import "home-page"; 
+@import "menu-page"; 
+@import "header";
+@import "footer"; 
 
 #content {
   display: flex;
   flex-direction: column;
   justify-content: center;
 }
-
-// main content
-main {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-top: 55px;
-}
-
-// background image
-#background-img {
-  position: relative;
-  width: 100%;
-  height: 950px;
-  opacity: 0.4;
-  z-index: 2;
-}
-
-#squid-logo {
-  z-index: 3;
-  position: absolute;
-  top: 100px;
-  height: 170px;
-  width: 170px;
-}
-
-// main container 
-#main-container {
-  position: absolute;
-  display: flex;
-  flex-direction: row;
-  width: 75%;
-  height: 700px; 
-  background-color: black;
-  box-shadow: 0px 12px 19px 9px rgba(0,0,0,0.55);
-  border-radius: 10px;
-  border: 1px solid $eggshell;
-  z-index: 2;
-  img {
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-  }
-} 
-
-.info-card {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  background-color: black;
-  color: $eggshell;
-  width: auto;
-  height: 100%;
-  padding: 20px;
-  border-bottom-left-radius: 10px;
-  border-top-left-radius: 10px;
-}
-
-.card-div {
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-  width: 75%;
-  p {
-    text-align: center;
-    line-height: 2rem;
-    font-size: 1rem;
-  }
-}
-
-.card-headings {
-  text-align: center;
-  color: $lightblue;
-}
-
-// footer
-footer {
-  position: relative;
-  bottom: 0px;
-  width: 100%;
-  height: fit-content;
-  display: flex;
-  flex-direction: column;
-  background-color: $darkgrey;
-  color: $eggshell;
-  ul {
-    line-height: 1.8rem;
-    font-size: .90rem;
-    width: 200px;
-    text-align: left;
-  }
-  a {
-    color: $eggshell;
-  }
-}
-
-#footer-info {
-  display: flex;
-  justify-content: space-evenly;
-  width: 100%;
-  padding: 30px;
-  background-color: $hotpink;
-}
-
-#explore {
-  display: flex;
-  flex-direction: column;
-  li a:hover {
-    text-decoration: underline;
-  }
-}
-
-#follow {
-  display: flex;
-  flex-direction: column;
-  li a:hover {
-    text-decoration: underline;
-  }
-}
-
-.footer-headings {
-  padding: 0px;
-  margin: 0px;
-}
-
-#copyright-info {
-  display: flex;
-  justify-content: center;
-  padding: 30px;
-  background-color: $darkgrey;
-  p {
-    width: fit-content;
-    font-size: .90rem;
-  }
-}
-
