--- a/app/scss/_menu-page.scss
+++ b/app/scss/_menu-page.scss
@@ -1,9 +1,33 @@
 // menu
+#main-menu {
+ display: flex;
+ justify-content: center;
+ align-items: center;
+ height: fit-content;
+}
+
 #menu-container {
     margin-top: 55px;
     display: flex;
-    justify-content: center;
-    width: 50%;
+    justify-content: space-evenly;
+    flex-direction: row;
+    width: 80%;
     height: fit-content;
-    background-color: red;
+    background-color: $eggshell;
+    p {
+        line-height: 2rem;
+    }
+}
+
+.menu-divs {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    padding: 20px;
+    margin: 10px;
+    width: 20%;
+    height: 500px;
+    h3 {
+        text-align: center;
+    }
 }
