Added images to menu divs, background image to menu page, modified header spacing, completed basic menu page, tab-switching is functional between home and menu tabs

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -9,7 +9,7 @@ header {
     position: fixed;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-evenly;
     padding: 7px 30px 7px 30px;
     align-items: center;
     background-color: $eggshell;
