--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -2,8 +2,8 @@
 @import "variables"; 
 // footer
 footer {
-    //position: absolute;
-    //bottom: 0px;
+    position: relative;
+    bottom: 0px;
     width: 100%;
     height: fit-content;
     display: flex;
