--- a/app/scss/_home-page.scss
+++ b/app/scss/_home-page.scss
@@ -9,10 +9,10 @@
 }
 
 // background image
-#background-img {
-    // position: relative;
+#home-background-img {
+    top: 55px;
     width: 100%;
-    height: 950px;
+    height: 960px;
     opacity: 0.4;
     z-index: 2;
   }
