--- a/app/scss/_menu-page.scss
+++ b/app/scss/_menu-page.scss
@@ -8,7 +8,12 @@
  align-items: center;
  flex-direction: column-reverse;
  height: fit-content;
+ background-color: $darkgrey;
+ border-left: 2px solid black;
+ border-right: 2px solid black;
  h2 {
+    position: absolute;
+    top: 105px;
     margin: 10px;
     padding: 3px;
     width: 200px;
@@ -23,7 +28,17 @@
  }
 }
 
+#background-img {
+    position: absolute;
+    top: 55px;
+    width: 100%;
+    height: 1700px;
+    opacity: 0.4;
+    z-index: 2;
+  }
+
 #menu-container {
+    z-index: 2;
     margin-top: 55px;
     display: flex;
     justify-content: center;
@@ -33,8 +48,8 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 75%;
-    height: fit-content;
+    width: 60%;
+    height: 1700px;
     p {
         line-height: 2rem;
     }
@@ -43,27 +58,33 @@
 .menu-divs {
     display: flex;
     align-items: center;
+    justify-content: center;
     flex-direction: row;
-    padding: 20px;
-    width: 50%;
+    padding: 30px;
+    width: 750px;
     height: 380px;
-    border: 1px red solid;
+    margin: 25px 0px 25px 0px; 
     border-radius: 5px;
-    background-color: transparent;
+    border: 2px #93A476 solid;
+    box-shadow: 0px 8px 20px 1px rgba(0,0,0,0.25);
+    background-color: #F5EADA;
     ul {
         height: 100%;
+        width: 190px;
         padding: 0px;
+        margin-right: 20px;
     }
     h3 {
         text-align: left;
         margin-top: 0px;
         margin-bottom: 10px;
         font-size: 1.3rem;
-        color: $lightblue;
+        color: $hotpink;
     }
 }
 
 .food-img {
     height: 100%;
-    width: 500px;
+    width: 450px;
+    border-radius: 3px;
 }
