added new module contact-page and added basic scss styling. Added background image to contact page. Added placeholder google maps image to contact container. Finished basic css styling

--- a/app/scss/style.scss
+++ b/app/scss/style.scss
@@ -2,6 +2,7 @@
 @import "variables"; 
 @import "home-page"; 
 @import "menu-page"; 
+@import "contact-page"; 
 @import "header";
 @import "footer"; 
 
