--- a/app/scss/_menu-page.scss
+++ b/app/scss/_menu-page.scss
@@ -1,6 +1,5 @@
 @import "globals"; 
 @import "variables"; 
-
 // menu
 #main-menu {
  display: flex;
@@ -23,8 +22,6 @@
     border-radius: 5px;
     border: 3px #DDA471 solid;
     font-size: 1.7rem;
-    //border-top-left-radius: 5px;
-    //border-top-right-radius: 5px;
  }
 }
 
@@ -62,10 +59,10 @@
     flex-direction: row;
     padding: 30px;
     width: 750px;
-    height: 380px;
+    height: 380px; 
     margin: 25px 0px 25px 0px; 
     border-radius: 5px;
-    border: 2px #93A476 solid;
+    border: 2px #DDA471 solid;
     box-shadow: 0px 8px 20px 1px rgba(0,0,0,0.25);
     background-color: #F5EADA;
     ul {
@@ -87,4 +84,5 @@
     height: 100%;
     width: 450px;
     border-radius: 3px;
+    border: 2px #DDA471 solid;
 }
