Modified scss styling to the menu-page, I think it looks better. Modified styling to all pages of website. Looks better I think.

--- a/app/scss/_footer.scss
+++ b/app/scss/_footer.scss
@@ -10,6 +10,7 @@ footer {
     flex-direction: column;
     background-color: $darkgrey;
     color: $eggshell;
+    z-index: 3;
     ul {
       line-height: 1.8rem;
       font-size: .90rem;
