--- a/app/scss/_menu-page.scss
+++ b/app/scss/_menu-page.scss
@@ -12,22 +12,22 @@
  border-right: 2px solid black;
  h2 {
     position: absolute;
-    top: 105px;
+    top: 40px;
     margin: 10px;
     padding: 3px;
     width: 200px;
     text-align: center;
-    background-color: #F5EADA;
+    background-color: white;
     color: $lightblue;
     border-radius: 5px;
     border: 3px #DDA471 solid;
-    font-size: 1.7rem;
+    font-size: 1.9rem;
  }
 }
 
 #background-img {
-    position: absolute;
-    top: 55px;
+    margin-top: 55px;
+    position: relative;
     width: 100%;
     height: 1700px;
     opacity: 0.4;
@@ -35,8 +35,8 @@
   }
 
 #menu-container {
+    position: absolute;
     z-index: 2;
-    margin-top: 55px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -45,8 +45,10 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    width: 60%;
-    height: 1700px;
+    border-radius: 15px;
+    border: 3px #DDA471 solid;
+    width: 55%;
+    height: 1500px;
     p {
         line-height: 2rem;
     }
@@ -61,10 +63,10 @@
     width: 750px;
     height: 380px; 
     margin: 25px 0px 25px 0px; 
-    border-radius: 5px;
+    border-radius: 10px;
     border: 2px #DDA471 solid;
     box-shadow: 0px 8px 20px 1px rgba(0,0,0,0.25);
-    background-color: #F5EADA;
+    background-color: white;
     ul {
         height: 100%;
         width: 190px;
@@ -83,6 +85,6 @@
 .food-img {
     height: 100%;
     width: 450px;
-    border-radius: 3px;
+    border-radius: 5px;
     border: 2px #DDA471 solid;
 }
