--- a/app/scss/_contact-page.scss
+++ b/app/scss/_contact-page.scss
@@ -8,9 +8,9 @@
     margin-top: 55px;
 }
 
-#contact-background-img {
+#contact-background-img {   
     opacity: 0.4;
-    height: 850px;
+    height: 800px;
     width: 100%;
 }
 
@@ -30,7 +30,7 @@
     background-image: url('/src/jpg/korean-frame.jpg');
     background-position: center;
     background-repeat: no-repeat;
-    background-size: cover;
+    background-size: 100% 100%;
     box-shadow: 0px 8px 20px 1px rgba(0,0,0,0.5);
     h2 {
         margin: 0px 0px 10px 0px;
