--- a/app/scss/_home-page.scss
+++ b/app/scss/_home-page.scss
@@ -12,7 +12,7 @@
 #home-background-img {
     top: 55px;
     width: 100%;
-    height: 960px;
+    height: 900px;
     opacity: 0.4;
     z-index: 2;
   }
@@ -20,9 +20,9 @@
   #squid-logo {
     z-index: 3;
     position: absolute;
-    top: 100px;
-    height: 170px;
-    width: 170px;
+    top: 130px;
+    height: 150px;
+    width: 150px;
   }
   
   // main container 
@@ -30,28 +30,46 @@
     position: absolute;
     display: flex;
     flex-direction: row;
-    width: 75%;
-    height: 700px; 
-    background-color: black;
+    align-items: center;
+    width: 50%;
+    height: 600px; 
+    background-image: url('/src/jpg/korean-frame.jpg');
+    background-size: 100% 100%;
+    background-repeat: no-repeat;
     box-shadow: 0px 12px 19px 9px rgba(0,0,0,0.55);
-    border-radius: 10px;
-    border: 1px solid $eggshell;
+    border-radius: 15px;
+    border:  3px #DDA471 solid;
+    padding: 20px;
     z-index: 2;
     img {
-      border-top-right-radius: 10px;
-      border-bottom-right-radius: 10px;
+      border-radius: 5px;
+      border: 2px #DDA471 solid;
+      margin-right: 40px;
+      width: 550px;
+      height: 400px;
     }
   } 
+
+  #about {
+    margin-bottom: 20px;
+    h2 {
+      margin-bottom: 10px;
+    }
+    p {
+      text-align: justify;
+      padding-left: 40px;
+      padding-right: 40px;
+      line-height: 1.5rem;
+    }
+  }
   
   .info-card {
     display: flex;
     flex-direction: column;
     align-items: center;
-    background-color: black;
-    color: $eggshell;
-    width: auto;
-    height: 100%;
-    padding: 20px;
+    color: $darkgrey;
+    width: 300px;
+    height: 400px;
     border-bottom-left-radius: 10px;
     border-top-left-radius: 10px;
   }
@@ -60,15 +78,17 @@
     display: flex;
     align-items: center;
     flex-direction: column;
-    width: 75%;
+    h2 {
+      margin: 0px;
+    }
     p {
       text-align: center;
-      line-height: 2rem;
+      line-height: 3rem;
       font-size: 1rem;
     }
   }
   
   .card-headings {
     text-align: center;
-    color: $lightblue;
+    color: $hotpink;
   }
