--- a/app/scss/_contact-page.scss
+++ b/app/scss/_contact-page.scss
@@ -33,7 +33,7 @@
     background-size: 100% 100%;
     box-shadow: 0px 8px 20px 1px rgba(0,0,0,0.5);
     h2 {
-        margin: 0px 0px 10px 0px;
+        margin: 0px 0px 50px 0px;
         font-size: 1.7rem;
         color: $hotpink;
     }
@@ -47,9 +47,17 @@
         height: fit-content;
         width: 250px;
     }
+    ul img {
+        filter: invert(66%) sepia(78%) saturate(407%) hue-rotate(173deg) brightness(95%) contrast(85%);
+    }
+    li {
+        display: flex;
+        align-items: center;
+    }
     li a {
+        margin-left: 10px;
         color: $darkgrey;
-        line-height: 2rem;
+        line-height: 3rem;
     }
 }
 
