--- a/src/scss/_home-page.scss
+++ b/src/scss/_home-page.scss
@@ -33,17 +33,17 @@
     align-items: center;
     width: 50%;
     height: 600px; 
-    background-image: url('/src/jpg/korean-frame.jpg');
+    background-image: url(/src/jpg/korean-frame.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     box-shadow: 0px 12px 19px 9px rgba(0,0,0,0.55);
     border-radius: 15px;
-    border:  3px #DDA471 solid;
+    border:  3px $lightbrown solid;
     padding: 20px;
     z-index: 2;
     img {
       border-radius: 5px;
-      border: 2px #DDA471 solid;
+      border: 2px $lightbrown solid;
       margin-right: 40px;
       width: 550px;
       height: 400px;
