added jpg folder. Changed file paths to relative

--- a/src/scss/_contact-page.scss
+++ b/src/scss/_contact-page.scss
@@ -27,7 +27,7 @@
     width: 700px;
     width: 45%;
     border: 3px solid $lightbrown;
-    background-image: url(/src/jpg/korean-frame.jpg);
+    background-image: url(./jpg/korean-frame.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: 100% 100%;
