--- a/src/scss/_home-page.scss
+++ b/src/scss/_home-page.scss
@@ -33,7 +33,7 @@
     align-items: center;
     width: 50%;
     height: 600px; 
-    background-image: url(/src/jpg/korean-frame.jpg);
+    background-image: url(./jpg/korean-frame.jpg);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     box-shadow: 0px 12px 19px 9px rgba(0,0,0,0.55);
