--- a/src/scss/_menu-page.scss
+++ b/src/scss/_menu-page.scss
@@ -40,7 +40,7 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-image: url(/src/jpg/korean-frame.jpg);
+    background-image: url(./jpg/korean-frame.jpg);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
